avanze toast y loaders

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -29,7 +29,7 @@
     </ion-card-content>
     <ion-row>
       <ion-col>
-        <ion-button expand="block" (click)="login()" expand="block">Acceder</ion-button>
+        <ion-button   (click)="mostrarToast1()" expand="block" (click)="login()" expand="block">Acceder</ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -37,7 +37,7 @@
         <ion-button expand="block"(click)="registro()">Registrarse</ion-button>
       </ion-col>
     </ion-row>
-    <ion-button expand="block" (click)="obrirModal()">¿Has olvidado tu contraseña?</ion-button>
+    <ion-button (click)="mostrarToast4()" expand="block" (click)="obrirModal()">¿Has olvidado tu contraseña?</ion-button>
   </ion-card>
   
 </ion-content>
