--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar class="custom-toolbar">
     <ion-title>Perfil</ion-title>
 
-    <ion-button slot="start" (click)="volver1()">
+    <ion-button slot="start" [routerLink]="'/menu'">
       <ion-icon name="arrow-back-outline"></ion-icon>
     </ion-button>
 
