--- a/src/app/pages/escanear-qr/escanear-qr.page.html
+++ b/src/app/pages/escanear-qr/escanear-qr.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-button [routerLink]="'/menu'">
+    <ion-icon size="large" slot="start" name="caret-back-circle-outline"></ion-icon>
+    </ion-button>
     <ion-title>escanearQr</ion-title>
   </ion-toolbar>
 </ion-header>
