--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -5,7 +5,7 @@
 
     </ion-title>
         <ion-buttons slot="start">
-          <ion-button (click)="abrirPerfil()" class="custom-profile-button">
+          <ion-button (click)="abrirPerfil()" class="custom-profile-button" (click)="mostrarToast3()">
             <ion-icon class="custom-icon" name="person-circle-outline"></ion-icon>
            
           </ion-button>
@@ -16,23 +16,23 @@
   
 <ion-content [fullscreen]="true" class="custom-menu-content">
 
-
+  
 
   
  <ion-card class="card1">
-  <ion-card-content id="car2">
-    <ion-button shape="round" expand="full" (click)="verAsistencia()" class="custom-button custom-attendance-button">Asistencia
+  <ion-card-content animate="true" class="animacion1" id="car2">
+    <ion-button (click)="mostrarToast()" shape="round" expand="full" (click)="verAsistencia()" class="custom-button custom-attendance-button">Asistencia
         <ion-icon slot="end" name="calendar-outline"></ion-icon>
     </ion-button>
   </ion-card-content>
 
-  <ion-card-content id="car2">
-    <ion-button shape="round" expand="full" (click)="abrirQr()" class="custom-button custom-qr-button">QR
+  <ion-card-content animate="true" class="animacion1" id="car2">
+    <ion-button (click)="mostrarToast2()"  shape="round" expand="full" (click)="abrirQr()" class="custom-button custom-qr-button">QR
         <ion-icon slot="end" name="qr-code-outline"></ion-icon>
     </ion-button>
   </ion-card-content>
 
-  <ion-card-content id="car3">
+  <ion-card-content animate="true" class="animacion1" id="car3">
     <ion-button shape="round" expand="full" (click)="desLogin()" class="custom-button custom-logout-button">Cerrar Sesión
         <ion-icon slot="end" name="exit-outline"></ion-icon>
     </ion-button>
