--- a/src/app/modals/resul-qr/resul-qr.page.html
+++ b/src/app/modals/resul-qr/resul-qr.page.html
@@ -1,13 +1,30 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-icon (click)="close()" style="font-size: 25px;" slot="end" name="close-outline"></ion-icon>
-    <ion-title>resulQr</ion-title>
+    <ion-title>Resultado Qr</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-card>
-    <h3>nombre: {{dataAsistencia.nombre}}</h3>
-    <h3>Apellido: {{dataAsistencia.apellido}}</h3>
+<ion-content class="custom-menu-content" [fullscreen]="true">
+  <!-- <ion-card *ngFor="let i of dataQr"> -->
+
+    <ion-card *ngFor="let i of dataQr">
+    <ion-card-header>
+      
+    <ion-card-title> {{dataQr.asignatura}}</ion-card-title>
+    
+    </ion-card-header>
+  
+    <ion-card-content>
+      <p>Asignatura: {{dataQr.asignatura}}  </p>
+      <p>Docente: {{dataQr.docente}}</p>
+      <p>Fecha:  {{dataQr.fecha}}</p>
+      <p>Hora {{dataQr.hora}}</p>
+      <p>Sala: {{dataQr.sala}} </p>
+      <p>Seccion: {{dataQr.seccion}}  </p>
+      <p>Leccion: {{dataQr.leccion}}  </p>
+
+      <ion-button shape="round" (click)="registroA()">guardar</ion-button>
+    </ion-card-content>
   </ion-card>
 </ion-content>
