--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -24,8 +24,8 @@
   <ion-card class="card2">
     <img alt="carrera" src="https://pbs.twimg.com/profile_images/1273019238282866689/yEn2L7ny_400x400.jpg" />
     <ion-card-header>
-      <ion-card-subtitle>CARRERA:</ion-card-subtitle>
-      <ion-card-subtitle>SEDE:</ion-card-subtitle>
+      <ion-card-subtitle>CARRERA: ANALISTA PROGRAMADOR COMPUTACIONAL</ion-card-subtitle>
+      <ion-card-subtitle>SEDE: SAN JOAQUIN</ion-card-subtitle>
     </ion-card-header>
   </ion-card>
   
