--- a/src/app/pages/registro-asistencia/registro-asistencia.page.scss
+++ b/src/app/pages/registro-asistencia/registro-asistencia.page.scss
@@ -1,41 +1,54 @@
-ion-content {
-    --background: #f3f3f3;
-  }
+#boton1{
+
+}
   
-  ion-card {
-    background-color: #ffffff; 
-    border-radius: 10px; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-  }
-  
-  ion-card-content {
-    padding: 16px; 
-  }
-  
-  ion-item {
-    --background: #f9f9f9; 
-    border-radius: 6px; 
-    margin-bottom: 8px; 
-  }
-  
-  ion-input {
-    color: #333; 
-  }
-  
-  ion-button {
-    --border-radius: 20px; 
-    font-weight: bold; 
-    margin-top: 16px; 
-  }
-  
-  ion-button.registro-button {
-    --background: #007bff; 
-    --color: #fff; 
-  }
-  
-  ion-button.volver-button {
-    --background: #dc3545; 
-    --color: #fff; 
-  }
-  
-  
+.card2{
+  background-color: #000000; /* Fondo blanco */
+  border-radius: 10px; /* Bordes redondeados */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra ligera */
+  padding: 10px; /* Espacio interno */
+  margin: 30px; /* Margen exterior */
+  color: white;
+}
+
+.custom-menu-content {
+  --background: #ffffff00;
+  background-image: url('https://p16-sign-sg.tiktokcdn.com/tos-alisg-p-0037/oYyCE4LCAzhGvwDzMzvANf7CcAoohInAIGX0JB~tplv-photomode-zoomcover:720:720.jpeg?x-expires=1697929200&x-signature=vdzpNWJDBn6nn1pSwWlb5I9kETw%3D');
+  background-size: cover;
+  height: auto;
+} 
+
+.tol1{
+  --background: #ec2c2c;
+  --color: #000000;
+}
+
+ion-card-subtitle{
+  color: white;
+}
+
+ion-card-title{
+  color: white;
+}
+
+ion-button{
+  --background: #fff700;
+  --background-hover: #000000;
+  --background-activated: #000000;
+  --background-focused: #f0e802;
+
+  --color: rgb(0, 0, 0);
+
+  --border-radius: 0;
+  --border-color: #eaff2c;
+  --border-style: solid;
+  --border-width: 1px;
+
+  --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
+
+  --ripple-color: rgb(238, 255, 0);
+
+  --padding-top: 10px;
+  --padding-bottom: 10px;
+  margin-top: 1px;
+}
