avance errores, falta asistencia

--- a/src/app/modals/resul-qr/resul-qr.page.html
+++ b/src/app/modals/resul-qr/resul-qr.page.html
@@ -24,7 +24,7 @@
       <p>Seccion: {{dataQr.seccion}}  </p>
       <p>Leccion: {{dataQr.leccion}}  </p>
 
-      <ion-button shape="round" (click)="registroA()">guardar</ion-button>
+      <ion-button shape="round" (click)="guardarAsistencia()">guardar</ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
