--- a/src/app/pages/registro-asistencia/registro-asistencia.page.scss
+++ b/src/app/pages/registro-asistencia/registro-asistencia.page.scss
@@ -13,14 +13,14 @@
 
 .custom-menu-content {
   --background: #ffffff00;
-  background-image: url('https://p16-sign-sg.tiktokcdn.com/tos-alisg-p-0037/oYyCE4LCAzhGvwDzMzvANf7CcAoohInAIGX0JB~tplv-photomode-zoomcover:720:720.jpeg?x-expires=1697929200&x-signature=vdzpNWJDBn6nn1pSwWlb5I9kETw%3D');
+  background-image: url('https://www.solofondos.com/wp-content/uploads/2021/03/One-Piece-768x1280-1.jpg');
   background-size: cover;
   height: auto;
 } 
 
 .tol1{
   --background: #ec2c2c;
-  --color: #000000;
+  --color: #ffffff;
 }
 
 ion-card-subtitle{
@@ -28,7 +28,7 @@ ion-card-subtitle{
 }
 
 ion-card-title{
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 ion-button{
