--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -54,6 +54,16 @@
   
 
  </ion-card>
+
+ <ion-card>
+  <ion-card-content>
+    <ion-button (click)="obtenerChisteProgramacion()">GENERE SU CHISTE
+      <ion-icon name="add-circle-outline"></ion-icon>
+    </ion-button>
+    <p id="p">{{ chiste }}</p>
+  </ion-card-content>
+</ion-card>
+
  
 
  
