--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -57,7 +57,7 @@
 
  <ion-card>
   <ion-card-content>
-    <ion-button (click)="obtenerChisteProgramacion()">GENERE SU CHISTE
+    <ion-button class="botonchiste" (click)="obtenerChisteProgramacion()">GENERE SU CHISTE
       <ion-icon name="add-circle-outline"></ion-icon>
     </ion-button>
     <p id="p">{{ chiste }}</p>
