avance android good

--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -55,7 +55,7 @@
 
  </ion-card>
 
- <ion-card>
+ <ion-card class="cardchiste">
   <ion-card-content>
     <ion-button class="botonchiste" (click)="obtenerChisteProgramacion()">GENERE SU CHISTE
       <ion-icon name="add-circle-outline"></ion-icon>
